# agh-sync

./: Cargo.toml  PLAN.md  README.md  agh-sync.service  config.sample.yaml
agh-sync/: Cargo.toml
agh-sync-core/: Cargo.toml
agh-sync-core/src/: lib.rs
agh-sync-core/src/client/: mod.rs  reqwest_client.rs
agh-sync-core/src/config/: loader.rs  mod.rs  types.rs
agh-sync-core/src/metrics/: mod.rs  scraper.rs
agh-sync-core/src/model/: merge.rs  mod.rs  types.rs
agh-sync-core/src/sync/: actions.rs  mod.rs  orchestrator.rs
agh-sync-core/tests/: integration_test.rs
agh-sync/src/: main.rs  server.rs  templates.rs
