[workspace]
members = ["agh-sync-core", "agh-sync"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/lulkien/agh-sync"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Config
figment = { version = "0.10", features = ["yaml", "env", "toml"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
fern = "0.7"
log = "0.4"

# IPC
bincode = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }

# Prometheus
prometheus = { version = "0.13", features = ["process"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Testing
pretty_assertions = "1"
mockall = "0.13"
wiremock = "0.6"
