[package]
name = "agh-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agh-sync-core = { path = "../agh-sync-core" }
clap.workspace = true
axum.workspace = true
tower-http.workspace = true
askama.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
