[package]
name = "agh-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agh-sync-core = { path = "../agh-sync-core" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
fern.workspace = true
log.workspace = true
chrono.workspace = true
tokio-cron-scheduler.workspace = true
